--- a/src/templates/authen_member.html
+++ b/src/templates/authen_member.html
@@ -21,7 +21,7 @@
         	</div>
         <div class="section large">
             <div class="btn-group justified">
-                <span flow-btn flow-attrs="{accept:'image/*'}" class="btn btn-primary needsclick" >添加证书</span>
+                <span flow-btn flow-attrs="{accept:'image/*'}" class="btn btn-primary needsclick" >{{"Add" | translate}}</span>
                 <span class="btn btn-danger" ng-click="ajaxForm($flow)" ng-show="$flow.files.length > 0">提交审核</span>
             </div>
         </div>
