--- a/src/templates/favorite.html
+++ b/src/templates/favorite.html
@@ -36,6 +36,6 @@
             </div>
             
         </div>
-        <div class="section text-center m" ng-click="loadMore()">{{page.message}}</div>
+        <div class="section text-center m" ng-click="loadMore()">{{page.message | translate}}</div>
     </div>
 </div>
