--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -9,6 +9,7 @@
 <div class="scrollable">
     <div class="scrollable-content">
         <div class="translator-cover">
+            <div class="tranlator-intro-bg"></div>
             <imageview data-rate="750/422" src="staticImageUrl+translator.bg_image"></imageview>
             <div class="translator-info left">
                 <span class="h3 block">
