--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -35,7 +35,7 @@
                     <img ng-src="{{staticImageUrl + applicant.avatar || '../images/avatar_1.png'}}" err-src="../images/avatar_1.png" alt="">
                 </div>
             </div>
-            <div class="section text-center m" ng-click="loadMore()">{{page.message}}</div>
+            <div class="section text-center m" ng-click="loadMore()">{{page.message | translate}}</div>
         </div>
     </div>
 </div>
