--- a/src/templates/modify_phone_email.html
+++ b/src/templates/modify_phone_email.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">修改邮箱/手机号</div>
+<div ui-content-for="title">{{"Edit"|translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
     <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
@@ -16,11 +16,11 @@
                     <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
                     {{"Get Verification Code" | translate}}
                 </button>
-                <input type="text" name="verifycode" class="form-control" placeholder="请输入验证码" ng-model="input.verifycode" required>
+                <input type="text" name="verifycode" class="form-control" placeholder="{{'Enter Verification Code' | translate}}" ng-model="input.verifycode" required>
                 <!-- <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span> -->
             </div>
             <div class="kk-input-group flat">
-                <input type="password" name="password" class="form-control" placeholder="请输入旧登录密码" ng-model="input.password" required ng-minlength=8 />
+                <input type="password" name="password" class="form-control" placeholder="{{'Enter Old Password' | translate}}" ng-model="input.password" required ng-minlength=8 />
                 <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码至少8位</span> -->
             </div>
             <div class="kk-input-group">
