--- a/src/templates/modify_signin_password.html
+++ b/src/templates/modify_signin_password.html
@@ -20,11 +20,11 @@
                         <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
                         {{"Get Verification Code" | translate}}
                     </button>
-                    <input type="text" name="verifycode" class="form-control" placeholder="请输入验证码" ng-model="input.verifycode" required>
+                    <input type="text" name="verifycode" class="form-control" placeholder="{{'Enter Verification Code' | translate}}" ng-model="input.verifycode" required>
                     <!-- <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span> -->
                 </div>
                 <div class="kk-input-group flat">
-                    <input type="password" name="password" class="form-control" placeholder="请输入登录密码" ng-model="input.password" required ng-minlength=8 />
+                    <input type="password" name="password" class="form-control" placeholder="{{'Enter Password'|translate}}" ng-model="input.password" required ng-minlength=8 />
                     <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码至少8位</span> -->
                 </div>
                 <div class="kk-input-group">
