--- a/src/templates/modify_trade_password.html
+++ b/src/templates/modify_trade_password.html
@@ -19,10 +19,10 @@
                         <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
                         {{"Get Verification Code" | translate}}
                     </button>
-                    <input type="text" name="verifycode" class="form-control" placeholder="请输入验证码" ng-model="input.verifycode" required>
+                    <input type="text" name="verifycode" class="form-control" placeholder="{{'Enter Verification Code' | translate}}" ng-model="input.verifycode" required>
                 </div>
                 <div class="kk-input-group flat">
-                    <input type="password" name="password" class="form-control" placeholder="请输入交易密码" ng-model="input.password" required />
+                    <input type="password" name="password" class="form-control" placeholder="{{'Enter Transaction Password' | translate}}" ng-model="input.password" required />
                 </div>
                 <div class="kk-input-group">
                     <button type="submit" class="btn btn-warning block full-width">{{"Change Transaction Password" | translate}}</button>
