--- a/src/templates/records.html
+++ b/src/templates/records.html
@@ -2,25 +2,25 @@
 <div ui-content-for="title">{{"Withdraw Record" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
-	<span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
+    <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
 </div>
 <div class="scrollable">
-	<div class="scrollable-content">
-		<div class="section large m" ng-repeat="record in records">
-			<p>{{"Withdraw Notice" | translate}}</p>
-			<p>{{record.post_time}}</p>
-			<div class="section section-wide">
-				dribehanceLorem	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero rerum alias libero dolores, ea, nihil culpa excepturi a nobis aspernatur officia eligendi, quaerat ut laborum, nostrum. Aspernatur doloribus, iure accusamus.
-			</div>
-			<div class="section"></div>
-			<p>{{"Withdraw Money" | translate}}：<span class="text-danger">{{record.currency_type}}{{record.money}}</span></p>
-			<p>收款银行：<span class="text-gray-light">{{record.bank}}</span></p>
-			<p>收款卡号：<span class="text-gray-light">{{record.bankcard}}</span></p>
-			<p>开户人：<span class="text-gray-light">{{record.nickname}}</span></p>
-			<p ng-show="{{record.status == '1'}}">状态：<span class="text-danger">审核中</span></p>
-			<p ng-show="{{record.status == '2'}}">状态：<span class="text-danger">审核通过，已转账</span></p>
-			<p ng-show="{{record.status == '2'}}">提现时间：{{record.pay_time}}</p>
-		</div>
-		<div class="section text-center m" ng-click="loadMore()">{{page.message}}</div>
-	</div>
+    <div class="scrollable-content">
+        <div class="section large m" ng-repeat="record in records">
+            <p>{{"Withdraw Notice" | translate}}</p>
+            <p>{{record.post_time}}</p>
+            <div class="section section-wide">
+                dribehanceLorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero rerum alias libero dolores, ea, nihil culpa excepturi a nobis aspernatur officia eligendi, quaerat ut laborum, nostrum. Aspernatur doloribus, iure accusamus.
+            </div>
+            <div class="section"></div>
+            <p>{{"Withdraw Money" | translate}}：<span class="text-danger">{{record.currency_type}}{{record.money}}</span></p>
+            <p>{{"Due Bank"|translate}}：<span class="text-gray-light">{{record.bank}}</span></p>
+            <p>{{"Due Bank Card"|translate}}：<span class="text-gray-light">{{record.bankcard}}</span></p>
+            <p>{{"Account holder"|translate}}：<span class="text-gray-light">{{record.nickname}}</span></p>
+            <p ng-show="{{record.status == '1'}}">{{"Status"|translate}}：<span class="text-danger">{{"In the audit"}}</span></p>
+            <p ng-show="{{record.status == '2'}}">{{"Status"|translate}}：<span class="text-danger">{{"Audit pass, transfer"|translate}}</span></p>
+            <p ng-show="{{record.status == '2'}}">{{"Withdrawal time"|translate}}：{{record.pay_time}}</p>
+        </div>
+        <div class="section text-center m" ng-click="loadMore()">{{page.message | translate}}</div>
+    </div>
 </div>
