--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -25,7 +25,7 @@
             <div class="list-group-item" ui-turn-on="discripe_panel">
                 <span class="list-group-item-text">{{"Detail Description" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
-                <span class="pull-right" ng-show="input.details == ''">{{"Please Fill in" | translate}}</span>
+                <span class="pull-right" ng-show="input.details == ''">{{"Please enter" | translate}}</span>
                 <div class="section section-wide" ng-show="input.details != ''">{{input.details}}</div>
             </div>
             <div class="list-group-item needsclick" flow-btn flow-attrs="{accept:'image/*'}">
@@ -55,8 +55,8 @@
                     <h4 class="modal-title text-center">{{"Detail Description"| translate}}</h4>
                 </div>
                 <div class="modal-body">
-                    <textarea class="form-control" placeholder="{{'Please Fill in' | translate}}" ng-model="input.details" name="edit" required ng-if="input.editable_key != 'pay_day'"></textarea>
-                    <input class="form-control" type="number" placeholder="{{'Please Fill in' | translate}}" name="salary" ng-model="input.details" required ng-if="input.editable_key == 'pay_day'">
+                    <textarea class="form-control" placeholder="{{'Please enter' | translate}}" ng-model="input.details" name="edit" required ng-if="input.editable_key != 'pay_day'"></textarea>
+                    <input class="form-control" type="number" placeholder="{{'Please enter' | translate}}" name="salary" ng-model="input.details" required ng-if="input.editable_key == 'pay_day'">
                     <!-- <span class="text-primary" ng-show="editForm.salary.$invalid && editForm.salary.$dirty">必填,数字</span> -->
                 </div>
                 <div class="modal-footer">
