--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -233,7 +233,7 @@
                                 {{"Total Price" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
-                                {{input.total}}
+                                {{input.total_money_symbol}}{{input.total}}
                             </div>
                             <div class="kk-line kk-horizon bg-gray-lighter"></div>
                         </div>
