--- a/src/less/index.less
+++ b/src/less/index.less
@@ -377,6 +377,7 @@
         -webkit-border-radius: 100%;
         overflow: hidden;
         border: 3px solid white;
+        background-color: @app-bg;
     }
 }
 
