--- a/src/templates/apply_flow.html
+++ b/src/templates/apply_flow.html
@@ -217,7 +217,7 @@
                                 {{"Total price" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
-                                {{input.total}}
+                                {{input.total_money_symbol}}{{input.total}}
                             </div>
                             <div class="kk-line kk-horizon bg-gray-lighter"></div>
                         </div>
