--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -33,7 +33,7 @@
                     {{language.from_language}}-{{language.to_language}}---{{language.level}}
                 </div>
                 <div class="pull-right">
-                    <span class="btn btn-danger bg-white text-danger section section-condensed" ng-if="$index>1" ng-click="removeLanguage(language)">
+                    <span class="btn btn-danger bg-white text-danger section section-condensed" ng-if="user.languages.length>2" ng-click="removeLanguage(language)">
                         {{"Remove" | translate}}
                     </span>
                 </div>
@@ -81,7 +81,7 @@
                     <span class="text-small">{{translate_type.first_catalg_str}}</span>---{{translate_type.second_catalog_str}}
                 </div>
                 <div class="pull-right">
-                    <span class="btn btn-danger bg-white text-danger section section-condensed" ng-click="removeTranslateType(translate_type)">
+                    <span class="btn btn-danger bg-white text-danger section section-condensed" ng-if="user.translate_types.length>1" ng-click="removeTranslateType(translate_type)">
                         {{"remove"|translate}}
                     </span>
                 </div>
