--- a/src/templates/authen_industry.html
+++ b/src/templates/authen_industry.html
@@ -1,19 +1,24 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
 <div ui-content-for="title">{{"Professional Qualification" | translate}}</div>
 <div ui-content-for="navbarAction">
-    <span class="btn" ui-turn-on="upload_panel">{{"Add" | translate}}</span>
+    <!-- <span class="btn" ui-turn-on="upload_panel">{{"Add" | translate}}</span> -->
 </div>
 <div ui-content-for="backAction">
     <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
 </div>
 <div class="scrollable">
+    <div class="scrollable-header">
+        <div class="section large" ui-turn-on="upload_panel">
+            <i class="fa fa-plus-circle text-primary"></i> {{"Add" | translate}}
+        </div>
+    </div>
     <div class="scrollable-content">
-        <div class="section large text-center">
-            <div class="section" ng-repeat="authen in authen_entries">
+        <div class="section bg-transparent text-center">
+            <div class="section bg-transparent" ng-repeat="authen in authen_entries">
                 <img ng-src="{{staticImageUrl + authen.cover}}" class="block full-width" alt="">
                 <div class="section"></div>
-                <div class="section section-wide text-left authen-status-{{authen.status}}" ng-click="reupload(authen)">
-                    {{"Certificate name" | translate}}:{{authen.title}},{{authen.status_message}}
+                <div class="section section-wide bg-transparent text-left" ng-click="reupload(authen)" style="padding-bottom:0;padding-top:16px">
+                    {{"Certificate name" | translate}}:{{authen.title}},<span class="authen-status-{{authen.status}}">{{authen.status_message}}</span>
                 </div>
             </div>
             <div class="section" ng-if="authen_entries.length == 0">{{"No Authenication Information" | translate}}</div>
