--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -189,7 +189,7 @@
             </div>
             <div class="list-group-item clearfix" ng-click="edit({'pay_day':user.pay_day})">
                 <div class="pull-left">
-                    {{user.pay_day}}{{"Day"|translate}}
+                    {{user.pay_day}}/{{"Day"|translate}}
                 </div>
                 <div class="pull-right">
                     <i class="text-gray-light fa fa-chevron-right pull-right"></i>
